# bspmv

./: .gitignore  CMakeLists.txt  README.md
scripts/: dataset.py  matrix_macros.py  plot.py  run.py
src/: CMakeLists.txt  main.cpp
src/format/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  MatrixBase.cpp  MatrixBwcCoo.cpp  MatrixBwcCsr.cpp  MatrixBwcEll.cpp  MatrixBwcHll.cpp  MatrixCOO.cpp  MatrixCSR.cpp  MatrixELL.cpp  MatrixHLL.cpp
src/io/: CMakeLists.txt  MatrixConverter.cpp  MatrixConverter.hpp  MatrixReader.cpp  MatrixReader.hpp
src/kernel/: CMakeLists.txt  MatrixKernel.cpp  MatrixKernel.hpp
src/kernel/cpu/: MatrixKernelCPU.cpp  MatrixKernelCPU.hpp
src/kernel/gpu/: MatrixKernelGPU.cu  MatrixKernelGPU.cuh  MatrixKernelGPU.hpp  bwcCoo.cu  bwcCsr.cu  bwcEll.cu  bwcHll.cu  coo.cu  csr.cu  ell.cu  hll.cu
src/utils/: CMakeLists.txt  MatrixCheck.cpp  MatrixCheck.hpp  bspmvUtils.hpp
